# MAE-560

./: .gitignore  CMakeLists.txt  README.md
MAE_560_Project_1/: BoundaryConditions.hpp  CMakeLists.txt  Discretization.cpp  Discretization.hpp  Mesh.cpp  Parameters.hpp  SolutionVector.cpp  SolutionVector.hpp  TimeIntegration.cpp  TimeIntegration.hpp  main.cpp
MAE_560_Project_1/Common/: BoundaryConditions.cpp  BoundaryConditions.hpp  Discretization.cpp  Discretization.hpp  FormLinearSolveEqn.cpp  FormLinearSolveEqn.hpp  MAE_560_Project_1.h  Mesh.cpp  Mesh.hpp  Parameters.hpp  ProjectIncludes.hpp  ReadData.cpp  ReadData.hpp  SolutionVector.cpp  SolutionVector.hpp  TimeIntegration.cpp  TimeIntegration.hpp
MAE_560_Project_1/Solvers/Adv_Diff/: ADV_DIFF.cpp
MAE_560_Project_1/Solvers/Heat_Eqn_CN/: main.cpp
MAE_560_Project_1/Solvers/Heat_Eqn_Explicit_Euler/: main.cpp
MAE_560_Project_1/Solvers/Heat_Eqn_RK4/: HEAT_RK4.cpp
MAE_560_Project_1/Solvers/Wave_Eqn_AB2/: AB2_initial_data_CFL_4.csv  AB2_initial_data_CFL_8.csv  WAVE_AB2.cpp
MAE_560_Project_1/Solvers/Wave_Eqn_LW/: WAVE_LW.cpp
